<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ffxiv.housim</groupId>
    <artifactId>ffxiv-housing-simulator</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>bom</module>
        <module>app</module>
        <module>saint-coinach</module>
        <module>graphics</module>
        <module>hbqj</module>
    </modules>

    <packaging>pom</packaging>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ffxiv.housim</groupId>
                <artifactId>bom</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <java.version>16</java.version>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.20</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>

            </plugin>
        </plugins>
    </build>

</project>